--- a/index.html
+++ b/index.html
@@ -65,14 +65,60 @@
       </div>
     </div>
 
-    <h4 class="w3-padding-large w3-center"><em>"I found your Blog Hoskins site, and well.. what a wonderful thing you've done"</em></h4>
+    <!-- <h4 class="w3-padding-large w3-center"><em>"I found your Blog Hoskins site, and well.. what a wonderful thing you've done"</em></h4>
 
     <h4 class="w3-padding-large w3-center"><em>"OH MAN I JUST GOT IT WORKING! THE SHEER JOY!  Thanks for your work!"</em></h4>
 
     <h4 class="w3-padding-large w3-center"><em>"I'm not the best at coding, so your explanations were useful and I've certainly learnt a lot more than I knew before I found your site!"</em></h4>
 
-    <h4 class="w3-padding w3-center"><em>"Just a quick note to say thanks for the Helios project article. It started me off down a fantastic rabbit hole.."</em></h4>
+    <h4 class="w3-padding w3-center"><em>"Just a quick note to say thanks for the Helios project article. It started me off down a fantastic rabbit hole.."</em></h4> -->
 
+    <br><br>
+
+    <!-- TEXT SLIDESHOW -->
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
+      <br><br><br><br>
+      <!-- Full-width images with number and caption text -->
+      <div class="mySlides fade">
+        <!-- <div class="numbertext">1 / 3</div> -->
+        <!-- <img src="img1.jpg" style="width:100%"> -->
+        <div class="text"><h5>"I found your Blog Hoskins site, and well.. what a wonderful thing you've done"</h5></div>
+      </div>
+
+      <div class="mySlides fade">
+        <!-- <div class="numbertext">2 / 3</div> -->
+        <!-- <img src="img2.jpg" style="width:100%"> -->
+        <div class="text"><h5>"OH MAN I JUST GOT IT WORKING! THE SHEER JOY! Thanks for your work!"</h5></div>
+      </div>
+
+      <div class="mySlides fade">
+        <!-- <div class="numbertext">3 / 3</div> -->
+        <!-- <img src="img3.jpg" style="width:100%"> -->
+        <div class="text"><h5>"I'm not the best at coding, so your explanations were useful and I've certainly learnt a lot more than I knew before I found your site!"</h5></div>
+      </div>
+
+      <div class="mySlides fade">
+        <!-- <div class="numbertext">4 / 3</div> -->
+        <!-- <img src="img3.jpg" style="width:100%"> -->
+        <div class="text"><h5>"Just a quick note to say thanks for the Helios project article. It started me off down a fantastic rabbit hole.."</h5>
+        </div>
+      </div>
+
+      <!-- Next and previous buttons -->
+      <!-- <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a> -->
+    </div>
+
+
+    <!-- The dots/circles -->
+    <!-- <div style="text-align:center">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
+      <span class="dot" onclick="currentSlide(4)"></span>
+    </div> -->
+    <!-- END OF TEXT SLIDESHOW -->
 
     <!-- Container (Example Projects) -->
     <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
