--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 
   <!-- Container (About US) -->
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
-
+    <p>Purely a passion project, Digital Sunset Studios is the name I work under for my various software projects.  
+      Here you'll find infomation and links to my Virtual Reality projects, hardware synthesizers, and Web Development projects.
+    </p>
       <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <br>
@@ -57,7 +59,6 @@
   
       <!-- Do NOT Hide this text on small devices -->
       <div class="w3-col m6 w3-padding-large">
-        <p>Purely a passion project, Digital Sunset Studios is the name I work under for my software projects.</p>
         <p>In 2013 I first started playing with electronics, then later after winning a Google programming scholarship I started to combine this with software programming.</p>
         <p>After taking an intensive 9 week Web Dev bootcamp in 2019 I have been working as a full time web developer, but at night I put on my glasses and become a VR Developer as well as creating hardware synthersizers for fun.</p>
         <p>I currently live in Leipzig, Germany.</p>
