--- a/hardware.html
+++ b/hardware.html
@@ -118,11 +118,11 @@
         <!-- Container (DRUM PADS Section) -->
       <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
         <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">ARDUINO SAMPLING DRUM PAD</h3>
-        <p class="w3-center"><em>An Easy To Build Arduino Drum Pad</em></p>
+        <p class="w3-center"><em>Arduino Drum Pad With Build Guide</em></p>
         <div class="w3-row">
           <div class="w3-col m6 w3-center w3-padding-large">
             <br>
-            <img src="images/ArduinoDrumKitGif.gif" alt="DIY String Synth with Analog Filter" title="DIY String Synth with Analog Filter" width="90%">
+            <img src="images/ArduinoDrumKitGif.gif" alt="Auduino Sampling Drumpad" title="Auduino Sampling Drumpad" width="90%">
           </div>
         
             <!-- Do Not Hide this text on small devices -->
@@ -140,11 +140,11 @@
       <!-- Container (DOWDOW CLONE Section) -->
       <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
         <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">SLEEP MEDITATION MACHINE</h3>
-        <p class="w3-center"><em>An Easy To Build Arduino Drum Pad</em></p>
+        <p class="w3-center"><em>Dodow Clone</em></p>
         <div class="w3-row">
           <div class="w3-col m6 w3-center w3-padding-large">
             <br>
-            <img width="80%" src="images/dowdowCloneGif.gif" alt="DIY String Synth with Analog Filter" title="DIY String Synth with Analog Filter">
+            <img width="80%" src="images/dowdowCloneGif.gif" alt="Sleep Meditation Machine" title="Sleep Meditation Machine">
           </div>
         
             <!-- Do Not Hide this text on small devices -->
