--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
   <!-- Container (FISH TANK VR) -->
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
     <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">FISH TANK VR</h3>
-    <p class="w3-center"><em>Interactable Aquarium Enviroment</em></p>
+    <p class="w3-center"><em>Interactable Aquarium Environment</em></p>
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <br>
@@ -106,7 +106,7 @@
       <!-- Container (VR Drivin Section) -->
       <div class="w3-content w3-container w3-padding-64" id="portfolio">
         <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">VR DRIVIN'</h3>
-        <p class="w3-center"><em>A Fan remake of the 80's Classic driving Game</em><br>
+        <p class="w3-center"><em>A Fan Remake Of The 80's Classic Driving Game</em><br>
     
 
       <div class="w3-row">
@@ -166,7 +166,7 @@
       <!-- Container (XR Terra Section) -->
       <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
         <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">XR TERRA COURSE WORK</h3>
-        <p class="w3-center">XR Terra Course Work</p>
+        <p class="w3-center"><em>XR Terra Course Work</em></p>
         <div class="w3-row">
           <div class="w3-col m6 w3-center w3-padding-large">
             <br>
@@ -182,7 +182,7 @@
               <p><a href="https://www.xrterra.com/" target=”_blank”>XR Terra</a> is an online training platform who offer live classroom training in VR.  I took part in their <a href="https://www.xrterra.com/vr-developer-foundations/" target=”_blank”>VR Developer Foundations</a>  4 week course, and this was the result. </p>
               <p>Using Unity, C# and VR toolkits and libraries we created a scene with VR interactions and locomotion, also utilising Animations, character controllers and movement.</p>
               <p>In the video here (please click to play), you can see the interactable control panel which is also grabable, this triggers an animation that leads to the creation of an object. 
-                This object can then be assigned a material and then using another button, destroyed with particle effects.  Another level controls the poistion of the sun, changing the scenes lighting.  You can also pick up and eat half an apple.</p>
+                This object can then be assigned a material and then using another button, destroyed with particle effects.  Another level controls the poistion of the sun, changing the scenes lighting.  You can also pick up and eat half an apple :-)</p>
             </div>
           </div>
           
@@ -212,7 +212,7 @@
               <!-- Container (AR Course) -->
           <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
             <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">AUGMENTED REALITY</h3>
-            <p class="w3-center"><em>Interacting with the real world</em></p>
+            <p class="w3-center"><em>Interacting With The Real World</em></p>
             <div class="w3-row">
               <div class="w3-col m6 w3-center w3-padding-large">
                 <video width="90%" poster="images/AR_Car.gif"  alt="Augmented Reality Car on Table" title="Augmented Reality">
