--- a/webdev.html
+++ b/webdev.html
@@ -73,7 +73,7 @@
       <!-- Container (PETS OF BERLIN) -->
       <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
         <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">PETS OF BERLIN APP</h3>
-        <p class="w3-center"><em>Location based pet breeding app</em></p>
+        <p class="w3-center"><em>Location Based Pet Breeding App</em></p>
         <div class="w3-row">
           <div class="w3-col m6 w3-center w3-padding-large">
             <video width="60%" poster="images/PetsOfBerlinGif.gif"  alt="Pets Of Berlin App" title="PEts Of Berlin App">
@@ -119,7 +119,7 @@
       <!-- Container (BREXIT Game) -->
       <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
         <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">BREXIT GAME</h3>
-        <p class="w3-center"><em>PHASER FUN</em></p>
+        <p class="w3-center"><em>Phaser Fun</em></p>
         <div class="w3-row">
           <div class="w3-col m6 w3-center w3-padding-large">
             <video width="90%" poster="images/BrexitGameGif2.gif"  alt="A Game Of Brexit" title="Brexit Game">
