quotes front page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
       </div>
       </div>
     </div>
+<br><br>
+    <h4 class="w3-center NaVFontCol w3-opacity-min">Selected Quotes...</h4>
+    <br>
+    <!-- <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">Selected Quotes...</h3> -->
 
     <!-- <h4 class="w3-padding-large w3-center"><em>"I found your Blog Hoskins site, and well.. what a wonderful thing you've done"</em></h4>
 
@@ -74,7 +78,6 @@
 
     <h4 class="w3-padding w3-center"><em>"Just a quick note to say thanks for the Helios project article. It started me off down a fantastic rabbit hole.."</em></h4> -->
 
-    <br><br>
 
     <!-- TEXT SLIDESHOW -->
     <!-- Slideshow container -->
