--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
 <body>
 
 
-   <!-- Navbar (sit on top) -->
-<div class="w3-top">
+  <div class="w3-top">
     <div class="w3-bar" id="myNavbar">
-      <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu"></a>
+      <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+        <i class="fa fa-bars"></i>
+      </a>
       <a href="index.html" class="w3-bar-item w3-button NaVFontCol">HOME</a>
       <a href="portfolio.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>VR</a>
       <a href="hardware.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>HARDWARE</a>
       <a href="webdev.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i>WEB</a>
       <a href="about.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol">ABOUT</a>
-      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red"></a>
       </a>
     </div>
   
