--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
   <!-- Container (About US) -->
-  <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
+  <div class="w3-content w3-container w3-padding-64 DssBG w3-padding-large" id="about">
     <p>Purely a passion project, Digital Sunset Studios is the name I work under for my various software projects.  
       Here you'll find infomation and links to my Virtual Reality projects, hardware synthesizers, and Web Development projects.
     </p>
@@ -66,9 +66,13 @@
       </div>
       </div>
     </div>
-<br><br>
-    <h4 class="w3-center NaVFontCol w3-opacity-min">Selected Quotes...</h4>
-    <br>
+
+<div>
+  <br>
+  <h4 class="w3-center NaVFontCol w3-opacity-min quoteBox">Selected Quotes...</h4>
+  <br>
+</div>
+    
     <!-- <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">Selected Quotes...</h3> -->
 
     <!-- <h4 class="w3-padding-large w3-center"><em>"I found your Blog Hoskins site, and well.. what a wonderful thing you've done"</em></h4>
