--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="mySlides fade">
         <!-- <div class="numbertext">3 / 3</div> -->
         <!-- <img src="img3.jpg" style="width:100%"> -->
-        <div class="text"><h5>"I'm not the best at coding, so your explanations were useful and I've certainly learnt a lot more than I knew before I found your site!"</h5></div>
+        <div class="text"><h5>"Your explanations were so useful and I've certainly learnt a lot more than I knew before I found your site!"</h5></div>
       </div>
 
       <div class="mySlides fade">
