--- a/about.html
+++ b/about.html
@@ -149,6 +149,39 @@
     <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">CERTIFICATES & QUALIFICATIONS</h3>
     <br>
 
+    <button class="collapsible">June 2023 - Augmented Reality 101 (Zenva Academy)</button>
+    <div class="content">
+      <!-- Cert - Augmented Reality 101 -->
+    <div class="w3-row">
+      <div class="w3-col m6 w3-center w3-padding-large">
+        <img src="images/AR_Cert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Augmented Reality 101" width="100%" height="333">
+      </div>
+
+      <!-- DO NOT Hide this text on small devices -->
+      <div class="w3-col m6 w3-padding-large">
+        <h5>Augmented Reality 101</h5>
+        <h6>June 2023</h6>
+        <ul>
+          <li>Configure AR Foundation within Unity</li>
+          <li>Use your camera to detect planes</li>
+          <li>Create placement indicators to define positions</li>
+          <li>Implement tap gestures to spawn objects</li>
+          <li>Build your AR app to Android and iOS</li>
+        </ul>
+        <a href="https://academy.zenva.com/product/augmented-reality-101-working-with-ar-foundation/" target=”_blank”>Link To AR 101 Course Page</a>
+      </div>
+    </div>
+    <br>
+    </div>
+    <button class="collapsible">June 2023 - Intro to Particle Systems for Games (Zenva Academy)</button>
+    <div class="content">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+    <button class="collapsible">March 2023 - XR Foundations Developer (XR Terra)</button>
+    <div class="content">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+
 
     <!-- Cert - Augmented Reality 101 -->
     <div class="w3-row">
