--- a/education.html
+++ b/education.html
@@ -50,7 +50,7 @@
   </div>
 
 
-  <!-- Container (About Section) -->
+  <!-- Container (OVerview Section) -->
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
     <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">OVERVIEW</h3>
     <br>
