--- a/about.html
+++ b/about.html
@@ -150,7 +150,7 @@
     <br>
 
     <!-- Cert - Augmented Reality 101 -->
-    <button class="collapsible accordion">June 2023 - Augmented Reality 101 (Zenva Academy)</button>
+    <button onclick="none()" class="collapsible accordion">June 2023 - Augmented Reality 101 (Zenva Academy)</button>
     <div class="content">
       <!-- Cert - Augmented Reality 101 -->
     <div class="w3-row">
