--- a/about.html
+++ b/about.html
@@ -131,17 +131,58 @@
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
     <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">EDUCATION</h3>
     <br>
-    <ul>
-      <li>2023 - XR Terra - 4-week XR Foundations Developer (VR)</li>
-      <li>2019 - Ironhack, Berlin - 9-week Web Development Bootcamp</li>
-      <li>2017 - Udacity - Android Development, Scholarship funded by Google</li>
-      <li>2013/2014 - International Correspondence Schools - Bachelor of Technology (BTECH Level 3) Electronic Engineering</li>
-      <li>2009 - BSI Language School Berlin - Intensive Course, German</li>
-      <li>2007 - St. Martin's College, London - Introduction To Maya (Short Course)</li>
-      <li>1998/2001 - Amersham & Wycombe College, Bucks - Bachelor of Technology (BTECH) Sound Engineeering with Music Technology (GNVQ)</li>
-      <li>1997/1998 - Amersham & Wycombe College, Bucks - GNVQ in Art and Design</li>
-      <li>1993/1997 - The Grange School, Aylesbury</li>
-    </ul>
+    <table class="w3-center centerEdu">
+      <tr>
+        <th>Year</th>
+        <th>School</th>
+        <th>Course</th>
+      </tr>
+      <tr>
+        <td>2023</td>
+        <td>XR Terra</td>
+        <td>4-week XR Foundations Developer (VR)</td>
+      </tr>
+      <tr>
+        <td>2019</td>
+        <td>Ironhack, Berlin</td>
+        <td>9-week Web Development Bootcamp</td>
+      </tr>
+      <tr>
+        <td>2017</td>
+        <td>Udacity</td>
+        <td>Android Development, Scholarship funded by Google</td>
+      </tr>
+      <tr>
+        <td>2013 - 2014</td>
+        <td>International Correspondence Schools</td>
+        <td>Bachelor of Technology (BTECH Level 3) Electronic Engineering</td>
+      </tr>
+      <tr>
+        <td>2009</td>
+        <td>BSI Language School Berlin</td>
+        <td>Intensive Language Course (German)</td>
+      </tr>
+      <tr>
+        <td>2007</td>
+        <td>St. Martin's College, London</td>
+        <td>Introduction To Maya (Short Course)</td>
+      </tr>
+      <tr>
+        <td>1998 - 2001</td>
+        <td>Amersham & Wycombe College, Bucks</td>
+        <td>Bachelor of Technology (BTECH) Sound Engineeering with Music Technology (GNVQ)</td>
+      </tr>
+      <tr>
+        <td>1997 - 1998</td>
+        <td>Amersham & Wycombe College, Bucks</td>
+        <td>GNVQ in Art and Design</td>
+      </tr>
+      <tr>
+        <td>1993 - 1997</td>
+        <td>The Grange School, Aylesbury</td>
+        <td>General Education</td>
+      </tr>
+    </table>
   </div>
 
     <!-- Container (SOFTWARE Section) -->
