lazy & eager loading added to images/video

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
 
       <!-- First Parallax Image with Logo Text -->
-  <div class="bgimg-1 w3-display-container w3-opacity-min" alt="Digital Sunset Studios Projects" title="Digital Sunset Studios Projects">
+  <div loading="eager" class="bgimg-1 w3-display-container w3-opacity-min" alt="Digital Sunset Studios Projects" title="Digital Sunset Studios Projects">
     <div class="w3-display-middle" style="white-space:nowrap;">
       <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">ABOUT<span class="w3-hide-small"></span></span>
     </div>
@@ -208,7 +208,7 @@
       <!-- Cert - Augmented Reality 101 -->
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
-        <img src="images/AR_Cert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Augmented Reality 101" width="100%" height="333">
+        <img loading="lazy" src="images/AR_Cert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Augmented Reality 101" width="100%" height="333">
       </div>
 
       <!-- DO NOT Hide this text on small devices -->
@@ -234,7 +234,7 @@
           <!-- Cert --- Intro to Particle Systems for Games -->
       <div class="w3-row dividerColGrey">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/partCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Intro to Particle Systems for Games" width="100%" height="333">
+          <img loading="lazy" src="images/partCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Intro to Particle Systems for Games" width="100%" height="333">
         </div>
 
       <!--DO NOT Hide this text on small device - Cert Name here -->
@@ -259,7 +259,7 @@
           <!-- Cert -- XR Terra Cert -->
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
-        <img src="images/XR_Terra_Cert.png" class="w3-round w3-image" alt="Photo of Me" title="XR Terra Cert" width="100%" height="333">
+        <img loading="lazy" src="images/XR_Terra_Cert.png" class="w3-round w3-image" alt="Photo of Me" title="XR Terra Cert" width="100%" height="333">
       </div>
 
       <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -285,7 +285,7 @@
           <!-- Cert - Discover the XR Interaction Toolkit for VR -->
     <div class="w3-row dividerColGrey">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/XR_Cert_GW.png" class="w3-round w3-image" alt="Photo of Me" title="Cert - Discover the XR Interaction Toolkit for VR" width="100%" height="333">
+          <img loading="lazy" src="images/XR_Cert_GW.png" class="w3-round w3-image" alt="Photo of Me" title="Cert - Discover the XR Interaction Toolkit for VR" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small devices - Discover the XR Interaction Toolkit for VR -->
@@ -311,7 +311,7 @@
             <!-- Cert --- The complete 2023 Web Dev Bootcamp -->
       <div class="w3-row">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/CompWebDevCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - The complete 2023 Web Dev Bootcamp" width="100%" height="333">
+          <img loading="lazy" src="images/CompWebDevCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - The complete 2023 Web Dev Bootcamp" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -338,7 +338,7 @@
             <!-- Cert - Create Your First 3D Game in Unity -->
       <div class="w3-row dividerColGrey">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/3dSpiel_Cert_GW.png" class="w3-round w3-image" alt="Photo of Me" title="Cert - Create Your First 3D Game in Unity" width="100%" height="333">
+          <img loading="lazy" src="images/3dSpiel_Cert_GW.png" class="w3-round w3-image" alt="Photo of Me" title="Cert - Create Your First 3D Game in Unity" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small devices - Cert - Create Your First 3D Game in Unity  -->
@@ -364,7 +364,7 @@
             <!-- Cert --- Mobile Game Development for Beginners -->
       <div class="w3-row">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/MobDevCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Mobile Game Development for Beginners" width="100%" height="333">
+          <img loading="lazy" src="images/MobDevCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Mobile Game Development for Beginners" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -389,7 +389,7 @@
             <!-- Cert --- Learn the Entire Affinity Suite -->
       <div class="w3-row dividerColGrey">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/AffinityCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Learn the Entire Affinity Suite" width="100%" height="333">
+          <img loading="lazy" src="images/AffinityCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Learn the Entire Affinity Suite" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -415,7 +415,7 @@
             <!-- Cert - Unity Mini-Projects - C# Fundamentals -->
       <div class="w3-row">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/C_Sharp_Cert_GW.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Unity Mini-Projects - C# Fundamentals" width="100%" height="333">
+          <img loading="lazy" src="images/C_Sharp_Cert_GW.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Unity Mini-Projects - C# Fundamentals" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small device - Cert - "Unity Mini-Projects - C# Fundamentals"s -->
@@ -441,7 +441,7 @@
             <!-- Cert --- Data Privacy Training Basic  -->
       <div class="w3-row dividerColGrey">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/dataCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Data Privacy Training Basic" width="100%" height="333">
+          <img loading="lazy" src="images/dataCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Data Privacy Training Basic" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -462,7 +462,7 @@
             <!-- Cert --  Build The Game Of Life -->
       <div class="w3-row">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images\GameOfLifeCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Build The Game Of Life"  width="100%" height="333">
+          <img loading="lazy" src="images\GameOfLifeCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Build The Game Of Life"  width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -488,7 +488,7 @@
             <!-- Cert --- Complete SEO Training 2021 -->
       <div class="w3-row dividerColGrey">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/SEO21Cert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Complete SEO Training 2021" width="100%" height="333">
+          <img loading="lazy" src="images/SEO21Cert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Complete SEO Training 2021" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -516,7 +516,7 @@
       <!-- Cert --- Generative Music Box -->
       <div class="w3-row">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/MusicBoxCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Generative Music Box" width="100%" height="333">
+          <img loading="lazy" src="images/MusicBoxCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Generative Music Box" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -544,7 +544,7 @@
             <!-- Cert --- Building Your First VR Experience With Unity -->
       <div class="w3-row dividerColGrey">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/VRexpCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Building Your First VR Experience With Unity" width="100%" height="333">
+          <img loading="lazy" src="images/VRexpCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Building Your First VR Experience With Unity" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -570,7 +570,7 @@
             <!-- Cert --- XD/DC UI/UX Course -->
       <div class="w3-row">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/xddc_Cert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - XD/DC UI/UX Course" width="100%" height="333">
+          <img loading="lazy" src="images/xddc_Cert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - XD/DC UI/UX Course" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -596,7 +596,7 @@
             <!-- Cert --- SEO Training -->
       <div class="w3-row dividerColGrey">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/seoTrainCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - SEO Training" width="100%" height="333">
+          <img loading="lazy" src="images/seoTrainCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - SEO Training" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -623,7 +623,7 @@
             <!-- Cert --- 9-Week Web Development Bootcamp -->
       <div class="w3-row">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/irnHckCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - 9-Week Web Development Bootcamp" width="100%" height="333">
+          <img loading="lazy" src="images/irnHckCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - 9-Week Web Development Bootcamp" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -649,7 +649,7 @@
             <!-- Cert --- Angular Back To Front -->
       <div class="w3-row dividerColGrey">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/AngCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Angular Back To Front" width="100%" height="333">
+          <img loading="lazy" src="images/AngCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Angular Back To Front" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -676,7 +676,7 @@
             <!-- Cert ---- UI UX Design Thinking -->
       <div class="w3-row">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/uiUxCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - UI UX Design Thinking" width="100%" height="333">
+          <img loading="lazy" src="images/uiUxCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - UI UX Design Thinking" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -703,7 +703,7 @@
             <!-- Cert --- Android Basics Nanodegree by Google -->
       <div class="w3-row dividerColGrey">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/AndroidCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Android Basics Nanodegree by Google" width="100%" height="333">
+          <img loading="lazy" src="images/AndroidCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Android Basics Nanodegree by Google" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -730,7 +730,7 @@
             <!-- Cert --- AlgebraX: Introduction to Algebra -->
       <div class="w3-row">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/AlgeCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - AlgebraX: Introduction to Algebra" width="100%" height="333">
+          <img loading="lazy" src="images/AlgeCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - AlgebraX: Introduction to Algebra" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small device - Cert Name here -->
@@ -756,7 +756,7 @@
             <!-- Cert --- EE40LX: Electronic Interfaces: Bridging the Physical and Digital Worlds -->
       <div class="w3-row dividerColGrey">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <img src="images/ee40lxCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - EE40LX: Electronic Interfaces: Bridging the Physical and Digital Worlds" width="100%" height="333">
+          <img loading="lazy" src="images/ee40lxCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - EE40LX: Electronic Interfaces: Bridging the Physical and Digital Worlds" width="100%" height="333">
         </div>
 
         <!-- DO NOT Hide this text on small device - Cert Name here -->
