--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div id="home"><br><br></div>
   
   <!-- First Parallax Image with Logo Text -->
-  <div class="bgimg-1 w3-display-container w3-opacity-min" alt="Digital Sunset Studios Projects" title="Digital Sunset Studios Projects">
+  <div loading="eager" class="bgimg-1 w3-display-container w3-opacity-min" alt="Digital Sunset Studios Projects" title="Digital Sunset Studios Projects">
     <div class="w3-display-middle" >
         <h1 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">DIGITAL SUNSET STUDIOS</h1>
       </div>
