--- a/webdev.html
+++ b/webdev.html
@@ -40,7 +40,7 @@
 
   
   <!-- First Parallax Image with Logo Text -->
-  <div class="bgimg-1 w3-display-container w3-opacity-min" alt="Digital Sunset Studios Projects" title="Digital Sunset Studios Projects">
+  <div loading="eager" class="bgimg-1 w3-display-container w3-opacity-min" alt="Digital Sunset Studios Projects" title="Digital Sunset Studios Projects">
     <div class="w3-display-middle" style="white-space:nowrap;">
       <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">WEB DEV PROJECTS<span class="w3-hide-small"></span></span>
     </div>
@@ -76,7 +76,7 @@
         <p class="w3-center"><em>Location Based Pet Breeding App</em></p>
         <div class="w3-row">
           <div class="w3-col m6 w3-center w3-padding-large">
-            <video width="60%" poster="images/PetsOfBerlinGif.gif"  alt="Pets Of Berlin App" title="PEts Of Berlin App">
+            <video loading="lazy" width="60%" poster="images/PetsOfBerlinGif.gif"  alt="Pets Of Berlin App" title="PEts Of Berlin App">
             Your browser does not support the video tag.
             </video>
           </div>
@@ -100,7 +100,7 @@
         <p class="w3-center"><em>Angular TODO List App</em></p>
         <div class="w3-row">
           <div class="w3-col m6 w3-center w3-padding-large">
-            <video width="90%" poster="images/todoApp.gif"  alt="TODO List App" title="TODO List App">
+            <video loading="lazy" width="90%" poster="images/todoApp.gif"  alt="TODO List App" title="TODO List App">
             Your browser does not support the video tag.
             </video>
           </div>
@@ -122,7 +122,7 @@
         <p class="w3-center"><em>Phaser Fun</em></p>
         <div class="w3-row">
           <div class="w3-col m6 w3-center w3-padding-large">
-            <video width="90%" poster="images/BrexitGameGif2.gif"  alt="A Game Of Brexit" title="Brexit Game">
+            <video loading="lazy" width="90%" poster="images/BrexitGameGif2.gif"  alt="A Game Of Brexit" title="Brexit Game">
             Your browser does not support the video tag.
             </video>
           </div>
