--- a/about.html
+++ b/about.html
@@ -133,54 +133,54 @@
     <br>
     <table class="w3-center centerEdu">
       <tr>
-        <th>Year</th>
-        <th>School</th>
-        <th>Course</th>
+        <th class="paddingEdu">Year</th>
+        <th >School</th>
+        <th >Course</th>
       </tr>
       <tr>
         <td>2023</td>
-        <td>XR Terra</td>
-        <td>4-week XR Foundations Developer (VR)</td>
+        <td class="leftEdu paddingEdu">XR Terra</td>
+        <td class="leftEdu paddingEdu">4-week XR Foundations Developer (VR)</td>
       </tr>
       <tr>
         <td>2019</td>
-        <td>Ironhack, Berlin</td>
-        <td>9-week Web Development Bootcamp</td>
+        <td class="leftEdu paddingEdu">Ironhack, Berlin</td>
+        <td class="leftEdu paddingEdu">9-week Web Development Bootcamp</td>
       </tr>
       <tr>
         <td>2017</td>
-        <td>Udacity</td>
-        <td>Android Development, Scholarship funded by Google</td>
+        <td class="leftEdu paddingEdu">Udacity</td>
+        <td class="leftEdu paddingEdu">Android Development, Scholarship funded by Google</td>
       </tr>
       <tr>
         <td>2013 - 2014</td>
-        <td>International Correspondence Schools</td>
-        <td>Bachelor of Technology (BTECH Level 3) Electronic Engineering</td>
+        <td class="leftEdu paddingEdu">International Correspondence Schools</td>
+        <td class="leftEdu paddingEdu">Bachelor of Technology (BTECH Level 3) Electronic Engineering</td>
       </tr>
       <tr>
         <td>2009</td>
-        <td>BSI Language School Berlin</td>
-        <td>Intensive Language Course (German)</td>
+        <td class="leftEdu paddingEdu">BSI Language School Berlin</td>
+        <td class="leftEdu paddingEdu">Intensive Language Course (German)</td>
       </tr>
       <tr>
         <td>2007</td>
-        <td>St. Martin's College, London</td>
-        <td>Introduction To Maya (Short Course)</td>
+        <td class="leftEdu paddingEdu">St. Martin's College, London</td>
+        <td class="leftEdu paddingEdu">Introduction To Maya (Short Course)</td>
       </tr>
       <tr>
         <td>1998 - 2001</td>
-        <td>Amersham & Wycombe College, Bucks</td>
-        <td>Bachelor of Technology (BTECH) Sound Engineeering with Music Technology (GNVQ)</td>
+        <td class="leftEdu paddingEdu">Amersham & Wycombe College, Bucks</td>
+        <td class="leftEdu paddingEdu">Bachelor of Technology (BTECH) Sound Engineeering with Music Technology (GNVQ)</td>
       </tr>
       <tr>
         <td>1997 - 1998</td>
-        <td>Amersham & Wycombe College, Bucks</td>
-        <td>GNVQ in Art and Design</td>
+        <td class="leftEdu paddingEdu">Amersham & Wycombe College, Bucks</td>
+        <td class="leftEdu paddingEdu">GNVQ in Art and Design</td>
       </tr>
       <tr>
         <td>1993 - 1997</td>
-        <td>The Grange School, Aylesbury</td>
-        <td>General Education</td>
+        <td class="leftEdu paddingEdu">The Grange School, Aylesbury</td>
+        <td class="leftEdu paddingEdu">General Education</td>
       </tr>
     </table>
   </div>
