--- a/about.html
+++ b/about.html
@@ -190,9 +190,9 @@
       <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">SOFTWARE USED</h3>
       <br>
       <ul>
-        <li><b>VR:</b> Unity, C#, Visual Studio, Blender, Meta Quest Dev Hub.  Unity Assets: Probuilder, Bakery GPU Lightmapper, Allsky, Water Caustics Effect for URP v2, Blaze AI Engine, Mirrors and reflections for VR, VR Interaction Framework + more</li><br>
+        <li><b>VR:</b> Unity, C#, Visual Studio, Blender, Meta Quest Dev Hub.  Unity Assets: Probuilder, Bakery GPU Lightmapper, VR Interaction Framework + more</li><br>
         <li><b>Hardware:</b> Arduino IDE, C++, kiCad (PCB Design Software), Mozzie Audio Library, FortySevenEffects MIDI Library, Analog/Digital circuits</li><br>
-        <li><b>Webdesign:</b> Javascript, HTML, CSS, React (working knowledge), Angular (working knowledge), Node.js, Express.js, MongoDB, Bootstrap, POSTman, Github/Command Line, API's, Visual Studio Code </li><br>
+        <li><b>Webdesign:</b> Javascript, HTML, CSS, React (working knowledge), Node.js, Express.js, MongoDB, Bootstrap, POSTman, Github/Command Line, API's, Visual Studio Code </li><br>
         <li><b>Design/Creation:</b> Affinity Designer, Affinity Photo, Affinity Publisher, Photoshop, After Effects, Adobe XD, Audacity, FL Studio, Vegas Movie Studio</li>
       </ul>
     </div>
