--- a/hardware.html
+++ b/hardware.html
@@ -152,7 +152,7 @@
               <p>With this machine you sync your breathing to the pulse of the LEDs, which gradually slow down over either a user selectable 15 or 
                 30 minute runtime.  At the end of the cycle, hopefully you'll be relaxed enough to fall asleep.
               </p>
-              <p>instructions for this build were <a href="https://www.instructables.com/DIY-Dodow-Clone-Arduino-Sleep-Meditation-Machine/" target=”_blank”>published to Intructables</a> where it was entered for their Arduino Contest 2017.</p>
+              <p>Instructions for this build were <a href="https://www.instructables.com/DIY-Dodow-Clone-Arduino-Sleep-Meditation-Machine/" target=”_blank”>published to Intructables</a> where it was entered for their Arduino Contest 2017.</p>
             </div>
           </div>
           <br><br>
