--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 
 <div>
   <br>
-  <h4 class="w3-center NaVFontCol w3-opacity-min quoteBox">Selected Quotes...</h4>
+  <h4 class="w3-center NaVFontCol w3-opacity-min quoteBox"><a href="https://bloghoskins.blogspot.com/" style="text-decoration:none" alt="Link to Blog" title="Opens Link to Blog">
+    Selected Quotes From My Blog:</a></h4>
   <br>
 </div>
     
