about link added

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="w3-col m6 w3-padding-large">
         <p>In 2013 I first started playing with electronics, then later after winning a Google programming scholarship I started to combine this with software programming.</p>
         <p>After taking an intensive 9 week Web Dev bootcamp in 2019 I have been working as a full time web developer, but at night I put on my glasses and become a VR Developer as well as creating hardware synthersizers for fun.</p>
-        <p>I currently live in Leipzig, Germany.</p>
+        <p>I currently live in Leipzig, Germany. <a alt="Link to about page" title="Link to about page" href="about.html">Learn more here</a>.</p>
       </div>
       </div>
     </div>
