outside links open new page

--- a/about.html
+++ b/about.html
@@ -186,7 +186,7 @@
       <br>
       <ul>
         <li><b>VR:</b> Unity, C#, Visual Studio, Blender, Meta Quest Dev Hub.  Unity Assets: Probuilder, Bakery GPU Lightmapper, VR Interaction Framework + more</li><br>
-        <li><b>Hardware:</b> Arduino IDE, C++, kiCad (PCB Design Software), Mozzie Audio Library, FortySevenEffects MIDI Library, Analog/Digital circuits</li><br>
+        <li><b>Hardware:</b> Arduino IDE, C++, kiCad (PCB Design Software), Mozzi Audio Library, FortySevenEffects MIDI Library, Analog/Digital circuits</li><br>
         <li><b>Webdesign:</b> Javascript, HTML, CSS, React (working knowledge), Node.js, Express.js, MongoDB, Bootstrap, POSTman, Github/Command Line, API's, Visual Studio Code </li><br>
         <li><b>Design/Creation:</b> Affinity Designer, Affinity Photo, Affinity Publisher, Photoshop, After Effects, Adobe XD, Audacity, FL Studio, Vegas Movie Studio</li>
       </ul>
