--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
   <!-- Container (About US) -->
   <div class="w3-content w3-container w3-padding-64 DssBG w3-padding-large" id="about">
     <p>Purely a passion project, Digital Sunset Studios is the name I work under for my various software projects.  
-      Here you'll find infomation and links to my Virtual Reality projects, hardware synthesizers, and Web Development projects.
+      Here you'll find infomation and links to my <a href="portfolio.html" alt="Link to VR Projects" title="Opens VR Projects page">Virtual Reality projects</a>, 
+      <a href="hardware.html" alt="Link to Hardware Projects" title="Opens Hardware Projects Page">hardware projects</a>
+      , and <a href="webdev.html" alt="Link to Webdev Projects" title="Opens Webdev Projects Page">Web Development projects</a>.
     </p>
       <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
