--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 
     
     <!-- MY LINKS>-->
-    <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
+    <div class="w3-content w3-container w3-padding-64 DssBG" id="myLinks">
       <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">MY LINKS</h3>
       <br>
 
@@ -128,7 +128,7 @@
 
 
   <!-- Container (EDUCATION Section) -->
-  <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
+  <div class="w3-content w3-container w3-padding-64 DssBG" id="myEducation">
     <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">EDUCATION</h3>
     <br>
     <table class="w3-center centerEdu">
@@ -181,7 +181,7 @@
   </div>
 
     <!-- Container (SOFTWARE Section) -->
-    <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
+    <div class="w3-content w3-container w3-padding-64 DssBG" id="mySoftware">
       <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">SOFTWARE USED</h3>
       <br>
       <ul>
@@ -193,7 +193,7 @@
     </div>
 
   <!-- Container (About Section) -->
-  <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
+  <div class="w3-content w3-container w3-padding-64 DssBG" id="myCerts">
     <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">CERTIFICATES & QUALIFICATIONS</h3>
     <br>
 
