--- a/about.html
+++ b/about.html
@@ -254,7 +254,7 @@
           <!-- Cert -- XR Terra Cert -->
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
-        <img src="images/XR_Terra_Cert.png" class="w3-round w3-image" alt="Photo of Me" title="XR Terra Cert" width="100%" height="333">
+        <img src="images/XR_Terra_Cert.png" class="w3-round w3-image" alt="Photo of Me" title="XR Terra Cert" width="100%" height="333" id="myXR">
       </div>
 
       <!-- DO NOT Hide this text on small device - Cert Name here -->
