--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
   
       <!-- Do not Hide this text on small devices -->
       <div class="w3-col m6 w3-padding">
-        <p>A reddit user asked about a VR Aquarium experience, and seeing as there aren't many results I set about creating the Fish Tank VR demo.</p>
+        <p><b>Please click the gif for higher quality video</b>. A reddit user asked about a VR Aquarium experience, and seeing as there aren't many results I set about creating the Fish Tank VR demo.</p>
         <p>The demo starts with a menu screen, which when prompted takes you into an elevator.  From there you make your way across a brutalist enviroment towards and interactable aquarium. Using Push buttons, the user can learn about more about the fish contained within.</p>
         <p>This is currently only a proof of concept, although I'd like to develop it into a full experience with more fish and larger aquariums.</p>
         <p>The demo features buttons, animated doors, water caustics effects, volumetric light beams, dust particles (using Unitys particle system) and mostly baked lighting (using Bakery) to keep the frame rate high.</p>
@@ -126,7 +126,7 @@
               <p>I was a big fan of the original, however I only ever experienced it at 12 frames per second on the Sega Mega Drive.  Thanks to modern hardware, this version is currently running a lot quicker than 12fps.</p>
               <p>The 3d models were all built within Unity and any more detailed graphics (roadsign text, hedges etc) were creating using Affinity Designer, then heavily compressed before being imported.</p>
               <p>There's still much more work to be completed (like finishing the track!), however this demo certainly conveys the speed and the handling of the Arcade original.</p>
-              <p>Please click the GIF to view the full length video.</p>
+              <p><b>Click the GIF to view the full length video.</b></p>
               <br>
             </div>
             
@@ -181,7 +181,7 @@
         
             <!-- DO NOT Hide this text on small devices -->
             <div class="w3-col m6 w3-padding-large">
-              <p><a href="https://www.xrterra.com/" target=”_blank”>XR Terra</a> is an online training platform who offer live classroom training in VR.  I took part in their <a href="https://www.xrterra.com/vr-developer-foundations/" target=”_blank”>VR Developer Foundations</a>  4 week course, and this was the result. </p>
+              <p><b></b><a href="https://www.xrterra.com/" target=”_blank”>XR Terra</a> is an online training platform who offer live classroom training in VR.  I took part in their <a href="https://www.xrterra.com/vr-developer-foundations/" target=”_blank”>VR Developer Foundations</a>  4 week course, and this was the result. </p>
               <p>Using Unity, C# and VR toolkits and libraries we created a scene with VR interactions and locomotion, also utilising Animations, character controllers and movement.</p>
               <p>In the video here (please click to play), you can see the interactable control panel which is also grabable, this triggers an animation that leads to the creation of an object. 
                 This object can then be assigned a material and then using another button, destroyed with particle effects.  Another level controls the poistion of the sun, changing the scenes lighting.  You can also pick up and eat half an apple :-)</p>
