--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
   
       <!-- Do not Hide this text on small devices -->
       <div class="w3-col m6 w3-padding">
-        <p><b>Please click the gif for higher quality video</b>. A reddit user asked about a VR Aquarium experience, and seeing as there aren't many results I set about creating the Fish Tank VR demo.</p>
+        <p><b>Click the gif for higher quality video</b>. A reddit user asked about a VR Aquarium experience, and seeing as there aren't many results I set about creating the Fish Tank VR demo.</p>
         <p>The demo starts with a menu screen, which when prompted takes you into an elevator.  From there you make your way across a brutalist enviroment towards and interactable aquarium. Using Push buttons, the user can learn about more about the fish contained within.</p>
         <p>This is currently only a proof of concept, although I'd like to develop it into a full experience with more fish and larger aquariums.</p>
         <p>The demo features buttons, animated doors, water caustics effects, volumetric light beams, dust particles (using Unitys particle system) and mostly baked lighting (using Bakery) to keep the frame rate high.</p>
@@ -181,7 +181,7 @@
         
             <!-- DO NOT Hide this text on small devices -->
             <div class="w3-col m6 w3-padding-large">
-              <p><b></b><a href="https://www.xrterra.com/" target=”_blank”>XR Terra</a> is an online training platform who offer live classroom training in VR.  I took part in their <a href="https://www.xrterra.com/vr-developer-foundations/" target=”_blank”>VR Developer Foundations</a>  4 week course, and this was the result. </p>
+              <p><b>Click the gif for higher quality video</b>. <a href="https://www.xrterra.com/" target=”_blank”>XR Terra</a> is an online training platform who offer live classroom training in VR.  I took part in their <a href="https://www.xrterra.com/vr-developer-foundations/" target=”_blank”>VR Developer Foundations</a>  4 week course, and this was the result. </p>
               <p>Using Unity, C# and VR toolkits and libraries we created a scene with VR interactions and locomotion, also utilising Animations, character controllers and movement.</p>
               <p>In the video here (please click to play), you can see the interactable control panel which is also grabable, this triggers an animation that leads to the creation of an object. 
                 This object can then be assigned a material and then using another button, destroyed with particle effects.  Another level controls the poistion of the sun, changing the scenes lighting.  You can also pick up and eat half an apple :-)</p>
