added lower nav bar links

--- a/webdev.html
+++ b/webdev.html
@@ -141,6 +141,25 @@
       </div>
       <br><br>
     </div>
+
+      <!-- Container (Example Projects) -->
+      <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
+        <div class="animImgDiv">
+          <div class="flex-container">
+            <div>
+              <a href="portfolio.html"><img src="images/VR_Link.png" style="--f:.12;--r:1%" class="imgAnim" alt="VR projects link" title="Open VR projects page"></a>
+            </div>
+            <div>
+              <a href="hardware.html"><img src="images/hard_link.png" style="--f:.12;--r:1%" class="imgAnim" alt="Hardware projects link" title="Open Hardware projects page"></a>
+            </div>
+            <div>
+              <a href="webdev.html"><img src="images/webdev_link.png" style="--f:.12;--r:1%" class="imgAnim" alt="Web Dev projects link" title="Open Web Dev projects page"></a>
+            </div>  
+          </div>
+        </div>
+      </div>
+      <br><br>
+    </div>
   
   <!-- Footer -->
   <footer class="w3-center w3-black w3-padding-64 ">
